{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 481,
  "lineage": "2ee33b22-e919-514c-3738-c9f07e2472d7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d196336db5455b87",
            "domain": "vpc",
            "id": "eipalloc-0d196336db5455b87",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-54-199-234-77.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.199.234.77",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:internet-gateway/igw-0bd841fe4afbbb1b2",
            "id": "igw-0bd841fe4afbbb1b2",
            "owner_id": "339712969827",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC_IG",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC_IG",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "XGmedTokyo-TG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:loadbalancer/app/XGmedTokyo-TG01d-balancer/58fddcac1f97a84e",
            "arn_suffix": "app/XGmedTokyo-TG01d-balancer/58fddcac1f97a84e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "XGmedTokyo-TG01d-balancer-1813563663.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:loadbalancer/app/XGmedTokyo-TG01d-balancer/58fddcac1f97a84e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "XGmedTokyo-TG01d-balancer",
            "security_groups": [
              "sg-01e08c3e5fe1f3e3c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0204f881ad88bb1ab"
              },
              {
                "subnet_id": "subnet-0f46cbd4040e3d8d3"
              },
              {
                "subnet_id": "subnet-0f4f1ed8f71b7650d"
              }
            ],
            "subnets": [
              "subnet-0204f881ad88bb1ab",
              "subnet-0f46cbd4040e3d8d3",
              "subnet-0f4f1ed8f71b7650d"
            ],
            "tags": {
              "Name": "XGmedTokyo-TG01Balancer",
              "Owner": "Crows",
              "Project": "Web Service",
              "Service": "XGmedTokyo-TG01"
            },
            "tags_all": {
              "Name": "XGmedTokyo-TG01Balancer",
              "Owner": "Crows",
              "Project": "Web Service",
              "Service": "XGmedTokyo-TG01"
            },
            "vpc_id": "vpc-0b98111ffb25e1690",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.XGmedTokyo-sg02-LB01",
            "aws_subnet.public-ap-northeast-1a",
            "aws_subnet.public-ap-northeast-1c",
            "aws_subnet.public-ap-northeast-1d",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:listener/app/XGmedTokyo-TG01d-balancer/58fddcac1f97a84e/d35b06a0ef01f308",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:targetgroup/XGmedTokyo-TG01/6eae96a8375ed673",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:listener/app/XGmedTokyo-TG01d-balancer/58fddcac1f97a84e/d35b06a0ef01f308",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:loadbalancer/app/XGmedTokyo-TG01d-balancer/58fddcac1f97a84e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.XGmedTokyo-TG01",
            "aws_lb_target_group.XGmedTokyo-TG01",
            "aws_security_group.XGmedTokyo-sg02-LB01",
            "aws_subnet.public-ap-northeast-1a",
            "aws_subnet.public-ap-northeast-1c",
            "aws_subnet.public-ap-northeast-1d",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "XGmedTokyo-TG01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:targetgroup/XGmedTokyo-TG01/6eae96a8375ed673",
            "arn_suffix": "targetgroup/XGmedTokyo-TG01/6eae96a8375ed673",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:339712969827:targetgroup/XGmedTokyo-TG01/6eae96a8375ed673",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "XGmedTokyo-TG01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "XGmedTokyo-TG01",
              "Owner": "Crows",
              "Project": "Armageddon",
              "Service": "J-Tele-Doctor"
            },
            "tags_all": {
              "Name": "XGmedTokyo-TG01",
              "Owner": "Crows",
              "Project": "Armageddon",
              "Service": "J-Tele-Doctor"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d196336db5455b87",
            "connectivity_type": "public",
            "id": "nat-0543d947e890a6be9",
            "network_interface_id": "eni-0e349a9e24554d252",
            "private_ip": "10.98.1.180",
            "public_ip": "54.199.234.77",
            "subnet_id": "subnet-0f46cbd4040e3d8d3",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:route-table/rtb-0dc2bf62743d017ec",
            "id": "rtb-0dc2bf62743d017ec",
            "owner_id": "339712969827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0543d947e890a6be9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:route-table/rtb-073e3fe1539c009fa",
            "id": "rtb-073e3fe1539c009fa",
            "owner_id": "339712969827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd841fe4afbbb1b2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b44b4cd7d12f9da",
            "route_table_id": "rtb-0dc2bf62743d017ec",
            "subnet_id": "subnet-0dfcfd9a47f14dc41"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-northeast-1a",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0238be42fe9b98120",
            "route_table_id": "rtb-0dc2bf62743d017ec",
            "subnet_id": "subnet-0b3b5e5877ba07385"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-northeast-1c",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-ap-northeast-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ef38ee7e20f8023",
            "route_table_id": "rtb-0dc2bf62743d017ec",
            "subnet_id": "subnet-0718da1140f28fabf"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-ap-northeast-1d",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041409e5d87e2f4e1",
            "route_table_id": "rtb-073e3fe1539c009fa",
            "subnet_id": "subnet-0f46cbd4040e3d8d3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-northeast-1a",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0387ef2e602cc9ea6",
            "route_table_id": "rtb-073e3fe1539c009fa",
            "subnet_id": "subnet-0204f881ad88bb1ab"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-northeast-1c",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-ap-northeast-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0312f83316f5ac1ca",
            "route_table_id": "rtb-073e3fe1539c009fa",
            "subnet_id": "subnet-0f4f1ed8f71b7650d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-ap-northeast-1d",
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "XGmedTokyo-sg01-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:security-group/sg-062839e8ee34cc229",
            "description": "XGmedTokyo_VPC-sg01-servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062839e8ee34cc229",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MyHomePage",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "XGmedTokyo_VPC-sg01-servers",
            "name_prefix": "",
            "owner_id": "339712969827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC-sg01-servers",
              "Owner": "Crows",
              "Service": "J-Tele-Doctor"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC-sg01-servers",
              "Owner": "Crows",
              "Service": "J-Tele-Doctor"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "XGmedTokyo-sg02-LB01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:security-group/sg-01e08c3e5fe1f3e3c",
            "description": "XGmedTokyo_VPC-sg02-LB01",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e08c3e5fe1f3e3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tokyo Midtown Medical Center",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "XGmedTokyo_VPC-sg02-LB01",
            "name_prefix": "",
            "owner_id": "339712969827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC-sg02-LB01",
              "Owner": "Crows",
              "Service": "Load_Balancer"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC-sg02-LB01",
              "Owner": "Crows",
              "Service": "Load_Balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:subnet/subnet-0dfcfd9a47f14dc41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.98.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfcfd9a47f14dc41",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712969827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "private-ap-northeast-1a",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "private-ap-northeast-1a",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:subnet/subnet-0b3b5e5877ba07385",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.98.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3b5e5877ba07385",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712969827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "private-ap-northeast-1c",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "private-ap-northeast-1c",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-ap-northeast-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:subnet/subnet-0718da1140f28fabf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.98.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0718da1140f28fabf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339712969827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "private-ap-northeast-1d",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "private-ap-northeast-1d",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:subnet/subnet-0f46cbd4040e3d8d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.98.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46cbd4040e3d8d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712969827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "public-ap-northeast-1a",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "public-ap-northeast-1a",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:subnet/subnet-0204f881ad88bb1ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.98.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0204f881ad88bb1ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712969827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "public-ap-northeast-1c",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "public-ap-northeast-1c",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-ap-northeast-1d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:subnet/subnet-0f4f1ed8f71b7650d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1d",
            "availability_zone_id": "apne1-az2",
            "cidr_block": "10.98.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4f1ed8f71b7650d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712969827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "public-ap-northeast-1d",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "public-ap-northeast-1d",
              "Owner": "Crows",
              "Service": "Armageddon"
            },
            "vpc_id": "vpc-0b98111ffb25e1690"
          },
          "dependencies": [
            "aws_vpc.XGmedTokyo_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "XGmedTokyo_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:339712969827:vpc/vpc-0b98111ffb25e1690",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.98.0.0/16",
            "default_network_acl_id": "acl-0e08c62102adbed15",
            "default_route_table_id": "rtb-03a3190501898a788",
            "default_security_group_id": "sg-01d2ebe1435455b23",
            "dhcp_options_id": "dopt-0b1cbeaae7db8a82e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b98111ffb25e1690",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a3190501898a788",
            "owner_id": "339712969827",
            "tags": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC",
              "Owner": "Crows_Group",
              "Service": "Armageddon"
            },
            "tags_all": {
              "Goal": "Leave_Matrix",
              "Name": "XGmedTokyo_VPC",
              "Owner": "Crows_Group",
              "Service": "Armageddon"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}